Problem: deprecated `zmq_utils.h` is still included
Solution: remove all remaining references to `zmq_utils.h`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -497,8 +497,7 @@ if(MINGW)
 endif()
 
 include_directories(include ${CMAKE_CURRENT_BINARY_DIR})
-set(public_headers include/zmq.h
-                   include/zmq_utils.h)
+set(public_headers include/zmq.h)
 
 set(readme-docs AUTHORS
                 COPYING
