--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ test_timers
 test_radio_dish
 test_udp
 test_large_msg
+test_pre_allocated_fd_ipc
 tests/test*.log
 tests/test*.trs
 src/platform.hpp*
