Problem: cannot use new pre-allocated FD with TCP
Solution: parse the value set by the ZMQ_PRE_ALLOCATED_FD sockopt
when creating a new TCP socket and use it if valid.
Add new tests/test_pre_allocated_fd_tcp.cpp unit test.

--- a/Makefile.am
+++ b/Makefile.am
@@ -618,6 +618,7 @@ test_apps += \
 	tests/test_pair_ipc \
 	tests/test_reqrep_ipc \
 	tests/test_pre_allocated_fd_ipc \
+	tests/test_pre_allocated_fd_tcp \
 	tests/test_timeo \
 	tests/test_filter_ipc
 
@@ -644,6 +645,11 @@ tests_test_pre_allocated_fd_ipc_SOURCES = \
 	tests/test_pre_allocated_fd_ipc.cpp \
 	tests/testutil.hpp
 tests_test_pre_allocated_fd_ipc_LDADD = src/libzmq.la
+
+tests_test_pre_allocated_fd_tcp_SOURCES = \
+	tests/test_pre_allocated_fd_tcp.cpp \
+	tests/testutil.hpp
+tests_test_pre_allocated_fd_tcp_LDADD = src/libzmq.la
 
 if HAVE_FORK
 test_apps += tests/test_fork
