--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -91,6 +91,7 @@ if(NOT WIN32)
           test_router_mandatory_hwm
           test_term_endpoint_tipc
           test_pre_allocated_fd_ipc
+          test_pre_allocated_fd_tcp
   )
   if(HAVE_FORK)
     list(APPEND tests test_fork)
