Correction to merge
Keeps udp_address.cpp and udp_engine.cpp included in windows build under
any condition.

--- a/builds/msvc/vs2015/libzmq/libzmq.vcxproj
+++ b/builds/msvc/vs2015/libzmq/libzmq.vcxproj
@@ -255,12 +255,8 @@
     <ClCompile Include="..\..\..\..\src\v1_encoder.cpp" />
     <ClCompile Include="..\..\..\..\src\v2_decoder.cpp" />
     <ClCompile Include="..\..\..\..\src\v2_encoder.cpp" />
-    <ClCompile Include="..\..\..\..\src\udp_address.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DebugDLL|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\udp_engine.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='DebugDLL|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\udp_address.cpp"/>
+    <ClCompile Include="..\..\..\..\src\udp_engine.cpp"/>
     <ClCompile Include="..\..\..\..\src\xpub.cpp" />
     <ClCompile Include="..\..\..\..\src\xsub.cpp" />
     <ClCompile Include="..\..\..\..\src\zmq.cpp" />
