Problem: was ignoring directories with build files
Solution: fix .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,12 @@ remote_lat
 remote_thr
 inproc_lat
 inproc_thr
+!local_lat/
+!local_thr/
+!remote_lat/
+!remote_thr/
+!inproc_lat/
+!inproc_thr/
 doc/*.1
 doc/*.3
 doc/*.7
