--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,16 @@ env:
 - BUILD_TYPE=default
 - BUILD_TYPE=android
 - BUILD_TYPE=tweetnacl
+- BUILD_TYPE=cmake
 
 sudo: false
+
+addons:
+  apt:
+    sources:
+    - kubuntu-backports
+    packages:
+    - cmake
 
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils ; fi
