--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -9,7 +9,6 @@
 
 #cmakedefine ZMQ_FORCE_MUTEXES
 
-
 #cmakedefine HAVE_FORK
 #cmakedefine HAVE_CLOCK_GETTIME
 #cmakedefine HAVE_GETHRTIME
@@ -31,6 +30,9 @@
 #cmakedefine ZMQ_HAVE_OPENPGM
 #cmakedefine ZMQ_MAKE_VALGRIND_HAPPY
 
+#cmakedefine ZMQ_HAVE_CURVE
+#cmakedefine HAVE_TWEETNACL
+#cmakedefine HAVE_LIBSODIUM
 
 #ifdef _AIX
   #define ZMQ_HAVE_AIX
