Problem: CI still thinks libsodium is default
Solution: build by default with tweetnacl, and add sub-build project
to test libsodium

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ os:
 env:
 - BUILD_TYPE=default
 - BUILD_TYPE=android
-- BUILD_TYPE=tweetnacl
+- BUILD_TYPE=libsodium
 - BUILD_TYPE=cmake
 
 sudo: false
