Problem: typo in CMake platform.hpp breaks build
Solution: use ZMQ_USE_TWEETNACL as a define as expected instead of
HAVE_TWEETNACL

--- a/builds/cmake/platform.hpp.in
+++ b/builds/cmake/platform.hpp.in
@@ -31,7 +31,7 @@
 #cmakedefine ZMQ_MAKE_VALGRIND_HAPPY
 
 #cmakedefine ZMQ_HAVE_CURVE
-#cmakedefine HAVE_TWEETNACL
+#cmakedefine ZMQ_USE_TWEETNACL
 #cmakedefine HAVE_LIBSODIUM
 
 #ifdef _AIX
