--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,8 @@ test_poller
 test_timers
 test_radio_dish
 test_udp
+test_scatter_gather
+test_socketopt_hwm
 test_use_fd_ipc
 test_use_fd_tcp
 tests/test*.log
