--- a/builds/msvc/vs2012/libzmq/libzmq.vcxproj.filters
+++ b/builds/msvc/vs2012/libzmq/libzmq.vcxproj.filters
@@ -262,6 +262,9 @@
     <ClCompile Include="..\..\..\..\src\timers.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\tweetnacl.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\zmq.h">
@@ -559,6 +562,9 @@
       <Filter>src\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\timers.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\tweetnacl.h">
       <Filter>src\include</Filter>
     </ClInclude>
   </ItemGroup>
