Problem: nuget package using wrong symbol and configured for libsodium.

--- a/packaging/nuget/package.targets
+++ b/packaging/nuget/package.targets
@@ -14,9 +14,8 @@
   <!-- general -->
   <ItemDefinitionGroup>
     <ClCompile>
-      <!-- HAVE_LIBSODIUM defined in packaged builds and must be defined for package consumer. -->
-      <!-- ZMQ_HAVE_OPENPGM not defined in packaged builds and should not be defined by package consumer. -->
-      <PreprocessorDefinitions>HAVE_LIBSODIUM;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!-- ZMQ_USE_TWEETNACL defined in packaged builds and must be defined for package consumer. -->
+      <PreprocessorDefinitions>ZMQ_USE_TWEETNACL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(MSBuildThisFileDirectory)include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
