--- a/packaging/nuget/package.nuspec
+++ b/packaging/nuget/package.nuspec
@@ -17,12 +17,11 @@
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <developmentDependency>false</developmentDependency>
         <description>The 0MQ lightweight messaging kernel is a library which extends the standard socket interfaces with features traditionally provided by specialised messaging middleware products. 0MQ sockets provide an abstraction of asynchronous message queues, multiple messaging patterns, message filtering (subscriptions), seamless access to multiple transport protocols and more.</description>
-        <summary>The 0MQ lightweight messaging kernel, with libsodium integrated, packaged for Visual Studio 2013 (v120) and CTP_Nov2013 compilers.</summary>
+        <summary>The 0MQ lightweight messaging kernel, with tweetnacl integrated, packaged for Visual Studio 2013 (v120) and CTP_Nov2013 compilers.</summary>
         <releaseNotes>https://raw.github.com/zeromq/libzmq/master/NEWS</releaseNotes>
         <copyright>GNU Lesser GPL v3</copyright>
         <tags>native, libzmq, zmq, 0MQ, messaging, sockets, C++</tags>
         <dependencies>
-            <dependency id="libsodium_vc120" version="0.5.0.0" />
         </dependencies>
     </metadata>
     <files>
